# Debeon

./: .env  README.md  run-backend.bat  run-frontend.bat
.github/workflows/: dotnet-desktop.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: asset_loader.rs  client.rs  mod.rs
backend/src/config/: mod.rs
backend/src/models/: mod.rs
backend/src/roblox/: detector.rs  flags.rs  installer.rs  mod.rs  patcher.rs
backend/src/server/: mod.rs
frontend/: App.xaml  App.xaml.cs  Debeon.csproj
frontend/Models/: RobloxConfig.cs
frontend/Services/: ApiService.cs
frontend/Styles/: AppStyles.xaml
frontend/Views/: AssetsPage.xaml  AssetsPage.xaml.cs  AudioPage.xaml  AudioPage.xaml.cs  ControlsPage.xaml  ControlsPage.xaml.cs  DashboardPage.xaml  DashboardPage.xaml.cs  FastFlagsPage.xaml  FastFlagsPage.xaml.cs  GraphicsPage.xaml  GraphicsPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PerformancePage.xaml  PerformancePage.xaml.cs  ProfilesPage.xaml  ProfilesPage.xaml.cs
wpuii/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  wpuii.csproj
