[package]
name = "debeon-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
walkdir = "2.4"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
winreg = "0.52"
warp = "0.3"
futures = "0.3"
bytes = "1.5"
once_cell = "1.19"
base64 = "0.21"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Security",
]}

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
